opentelemetry-demo/preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-demo
  annotations:
    linkerd.io/inject: enabled
