opentelemetry-demo/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: opentelemetry-demo-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
